[package]
name = "webauthn-attestation-ca"
version = "0.5.0-wo-openssl.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64urlsafedata.workspace = true
serde.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }
webauthn-rs-error.workspace = true
x509-cert.workspace = true
