[package]
name = "webauthn-attestation-ca"
version = "0.5.0-wo-openssl.0"
edition = "2021"
rust-version = "1.70.0"
repository = "https://github.com/kanidm/webauthn-rs"
license = "MPL-2.0"
readme = "README.md"
description = "Webauthn Attestation CA Descriptions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64urlsafedata.workspace = true
serde.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }
webauthn-rs-error.workspace = true
x509-cert.workspace = true
