[package]
name = "webauthn-rs-core"
version = "0.5.0-wo-openssl.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
description = "Webauthn Cryptographic Operation Handling"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
default = []

[dependencies]
base64urlsafedata = { version = "0.1.2", path = "../base64urlsafedata" }
webauthn-rs-proto = { version = "0.5.0-dev", path = "../webauthn-rs-proto" }
serde = { version = "1", features = ["derive"] }
serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
serde_json = "1.0"
nom = "7.1"
base64 = "0.13"
thiserror = "1.0"
tracing = "0.1"
# We could consider replacing this with openssl rand.
rand = { version = "0.8" }
url = { version = "2", features = ["serde"] }
x509-parser = "0.13.0"
der-parser = "7.0.0"
compact_jwt_wo_openssl = { git = "https://github.com/codemonger-io/compact-jwt.git", tag = "v0.2.9-wo-openssl" }
uuid = { version = "1", features = ["serde"] }
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
x509-cert = "0.2"
x509-path-finder = { git = "https://github.com/codemonger-io/x509-path-finder.git", tag = "v0.7.1-sync.3" }
rustls-webpki = { git = "https://github.com/codemonger-io/webpki.git", tag = "v0.101.7-ext.1" }
const-oid = { version = "0.9", features = ["db"] }
rsa = "0.9"

[dev-dependencies]
hex-literal = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
