[package]
name = "webauthn-rs-core"
version = "0.5.0-wo-openssl.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.70.0"
description = "Webauthn Cryptographic Operation Handling"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64.workspace = true
base64urlsafedata.workspace = true
webauthn-attestation-ca.workspace = true
webauthn-rs-error.workspace = true
webauthn-rs-proto.workspace = true
serde.workspace = true
serde_cbor_2.workspace = true
serde_json.workspace = true
nom.workspace = true
thiserror.workspace = true
tracing.workspace = true
# We could consider replacing this with openssl rand.
rand.workspace = true
url = { workspace = true, features = ["serde"] }
x509-parser = "0.13.0"
der-parser = "7.0.0"
compact_jwt_wo_openssl = { git = "https://github.com/codemonger-io/compact-jwt.git", tag = "v0.2.9-wo-openssl" }
uuid = { workspace = true, features = ["serde"] }
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
x509-cert = "0.2"
x509-path-finder = { git = "https://github.com/codemonger-io/x509-path-finder.git", tag = "v0.7.1-sync.3" }
rustls-webpki = { git = "https://github.com/codemonger-io/webpki.git", tag = "v0.101.7-ext.1" }
const-oid = { version = "0.9", features = ["db"] }
rsa = "0.9"
ed25519-dalek = "2.1"
ed448-verifier = { git = "https://github.com/codemonger-io/ed448-verifier.git", tag = "v0.0.1" }

[dev-dependencies]
hex-literal = "0.3"
tracing-subscriber.workspace = true
webauthn-rs-device-catalog.workspace = true
